[package]
name = "rtlsdr-rs"
version = "0.1.0"
edition = "2021"

[features]
default = []
rtl_sdr_blog = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.9.3"
byteorder = "1.5.0"
log = "0.4.21"
tokio = { version = "1.36.0", features = ["full", "tracing"] }

[dev-dependencies]
rusb = "0.9.3"
byteorder = "1.5.0"
ctrlc = "3.4.4"
num-complex = "0.4.6"
stderrlog = "0.6.0"
sdre-rust-logging = "0.3.1"
mockall = "0.12.1"
