[package]
name = "rtlsdr-rs"
version = "0.1.0"
edition = "2021"

[features]
default = []
rtl_sdr_blog = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.9.4"
byteorder = "1.5.0"
log = "0.4.28"
tokio = { version = "1.47.1", features = ["full", "tracing"] }

[dev-dependencies]
rusb = "0.9.4"
byteorder = "1.5.0"
ctrlc = "3.5.0"
num-complex = "0.4.6"
stderrlog = "0.6.0"
sdre-rust-logging = "0.3.21"
mockall = "0.13.1"
